# lue

./: .appveyor.yml  .clang-format  .clang-tidy  .codacy.yaml  .editorconfig  .gitignore  .isort.cfg  .markdownlint-cli2.jsonc  .markdownlint-cli2.jsonc-new  .mdl_style.rb  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CMakeCache.txt  CMakeHPXPresets.json  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  conanfile.py  conanfile.txt  guide_build.txt  pyproject.toml  resample.sh  setup.py  use_case.py
document/doc/: CMakeLists.txt  Doxyfile.in  _config.yml.in  _toc.yml  about.rst  conf.py  conf.py.in  faq.md  index.md  index.rst  references.bib  related.rst  related_technology.rst  release.md  short_description.md  short_description.rst
document/doc/about/: cite.md  license.md  project.md  publication.md  related.md  release.md
document/doc/code/: index.rst
document/doc/contribute/: code.rst  documentation.md  documentation.rst  index.md  index.rst  release.md  release.rst
document/doc/example/: index.md  index.rst
document/doc/install/: conda.md  conda.rst  index.rst  source.rst
document/doc/manual/: concept.rst  glossary.md  index.md  index.rst
document/doc/pcraster/: index.md  index.rst  port.md  port.rst  status.md  status.rst
document/doc/publication/: index.md  index.rst
document/doc/quick_start/: cpp.md  game_of_life.py  index.md  python.md
document/doc/reference/: index.md  index.rst
document/doc/release/: index.rst
document/luepy/: CMakeLists.txt  Makefile  api.rst  changes.rst  concepts.rst  conf.py  conf.py.in  discretization.rst  index.rst  installation.rst  introduction.rst  naming.rst  quick_start.rst  taxonomy.rst
document/luepy/case_study/: .gitignore  CMakeLists.txt  areas.py  cities.py  constant.py  constant.rst  elevation.py  go.sh  gps_track.rst  index.rst  planets.py  point.py  point.rst  polygon.rst  raster.py  raster.rst  raster_stack.rst  temporal_stack_of_rasters.rst
document/luepy/ext/: generated_image.py
source/: CMakeLists.txt  component  lue-config.cmake
source/algorithm/: CMakeLists.txt
source/algorithm/hpx/: CMakeLists.txt
source/command/: CMakeLists.txt
source/command/describe_flow_direction/: CMakeLists.txt
source/data_model/: CMakeLists.txt
source/data_model/cxx/: CMakeLists.txt
source/data_model/doc/: data_model.md  index.md
source/data_model/gdal/: CMakeLists.txt
source/data_model/hdf5/: CMakeLists.txt
source/data_model/hl/: CMakeLists.txt
source/data_model/netcdf4/: CMakeLists.txt
source/data_model/proj/: CMakeLists.txt
source/data_model/python/: CMakeLists.txt  data_model.py.in  hdf5.py.in  setup.py.in
source/data_model/test/: CMakeLists.txt
source/data_model/translate/: CMakeLists.txt
source/data_model/utility/: CMakeLists.txt
source/data_model/validate/: CMakeLists.txt
source/data_model/view/: CMakeLists.txt
source/doc/: dataset.md  domain.md  index.md  logical_data_model.dot  lue.md  space_domain_taxonomy.dot  time_domain_taxonomy.dot  value.md
source/framework/: CMakeLists.txt
source/framework/algorithm/: CMakeLists.txt
source/framework/api/: CMakeLists.txt
source/framework/benchmark/: CMakeLists.txt
source/framework/case_study/: CMakeLists.txt
source/framework/core/: CMakeLists.txt  README.md
source/framework/doc/: framework.md  index.md
source/framework/image_land/: CMakeLists.txt
source/framework/io/: CMakeLists.txt
source/framework/model/: CMakeLists.txt
source/framework/partitioned_array/: CMakeLists.txt  README.md
source/framework/partitioned_raster/: CMakeLists.txt  README.md
source/framework/partitioned_route/: CMakeLists.txt
source/framework/python/: CMakeLists.txt  framework.py.in  pcraster.py.in
source/framework/snippet/: CMakeLists.txt
source/framework/test/: CMakeLists.txt
source/imgui/: CMakeLists.txt  main.cpp
source/imgui/sdl2/: api.cpp  imgui_binding.hpp  window.hpp
source/imgui/src/: menu.cpp  selectable.cpp  tab_bar.cpp  tab_item.cpp  tree_node.cpp  window.cpp
source/include/lue/: configure.hpp.in
source/lue/: CMakeLists.txt  array.cpp  array.h  collection.h  conceptual_data_model.dot  configure.h.in  cxx_api.h  dataset.cpp  dataset.h  dataset.md  define.h  domain.cpp  domain.h  domain.md  group.dox  logical_data_model.dot  phenomena.cpp  phenomenon.cpp  phenomenon.md  properties.md  property.cpp  property.h  property_set.cpp  property_set.h  property_set.md  property_sets.h  space_domain.cpp  tag.h  universe.cpp  universe.h  universe.md  utility.h  value.h  value_taxonomy.dot
source/lue-0.0.0/: Doxyfile.in  cxx_api.h  dataset.md  dot_colors.txt  lue.md  phenomena.md  phenomenon.md  property.md  property_set.md  property_sets.md  space_domain_taxonomy.dot  time_domain_taxonomy.dot  universe.md  universes.md
source/lue-0.0.0/c_api/: CMakeLists.txt  collection.c  collection.h  dataset.c  dataset.h  define.h  domain.h  group.dox  phenomena.c  (+8 more)
source/lue-0.1.0/: Doxyfile.in
source/lue_cxx/: CMakeLists.txt
source/lue_data_model/: CMakeLists.txt
source/lue_framework/: CMakeLists.txt
source/lue_hdf5/: CMakeLists.txt
source/lue_hl/: CMakeLists.txt
source/lue_py/: CMakeLists.txt  MANIFEST.in  setup.py.in
source/lue_shared/: CMakeLists.txt
source/lue_test/: CMakeLists.txt
source/lue_time/: CMakeLists.txt
source/lue_translate/: CMakeLists.txt  command.h  dot.cpp  dot.h  format.h  main.cpp  metadata.cpp  metadata.h  translate.cpp  translate.h
source/lue_utility/: CMakeLists.txt  application.cpp  application.h  command.cpp  command.h  print_message.cpp  print_message.h  stopwatch.cpp  utility.h
source/lue_validate/: CMakeLists.txt
source/luehl/: raster.cpp  raster.h
source/luepy/: CMakeLists.txt  array.cpp  collection.h  conversion.cpp  dataset.cpp  domain.cpp  numpy.h  phenomenon.cpp  property.cpp  property_set.cpp  python_extension.cpp  setup.py.in  space_domain.cpp  universe.cpp
source/python/: CMakeLists.txt  lue.py.in
source/qa/: CMakeLists.txt  lue_scalability.py
source/quality_assurance/: CMakeLists.txt
source/shared/: CMakeLists.txt
source/view/: CMakeLists.txt
(+5416 files in other folders)
